# nv_vulkan_raytrace

./: .gitignore  README.md
rt_weekend/: .gitignore  CMakeLists.txt
rt_weekend/media/scenes/: Medieval_building.mtl
rt_weekend/rtnv/: CMakeLists.txt
rt_weekend/rtnv/cmake/: setup.cmake
rt_weekend/rtnv/nvvk/: allocator_dedicated_vk.hpp
rt_weekend/shaders/: diffuse.rmiss  random.glsl  raycommon.glsl  raytrace.rchit  raytrace.rgen  raytrace.rint  raytrace.rmiss  raytrace_mesh.rchit  raytrace_sphere.rchit
rt_weekend/spv/: frag_shader.frag.spv  passthrough.vert.spv  post.frag.spv  raytrace.rchit.spv  raytrace.rgen.spv  raytrace.rint.spv  raytrace.rmiss.spv  raytraceShadow.rmiss.spv  vert_shader.vert.spv
rt_weekend/src/: application.cpp  application.hpp  application_impl.cpp  application_impl.hpp  application_impl_descriptor.cpp  application_impl_post.cpp  application_impl_rt.cpp  main.cpp
rt_weekend/src/common/: obj_loader.cpp  obj_loader.h
rt_weekend/src/material/: material_obj.hpp
rt_weekend/src/primitive/: sphere.cpp  sphere.hpp
vk_raytracing_tutorial_KHR/: CMakeLists.txt
vk_raytracing_tutorial_KHR/common/: obj_loader.h
vk_raytracing_tutorial_KHR/my_ray_tracing/: CMakeLists.txt  README.md  hello_vulkan.cpp  hello_vulkan.h  main.cpp
vk_raytracing_tutorial_KHR/my_ray_tracing/shaders/: frag_shader.frag  passthrough.vert  post.frag  raycommon.glsl  raytrace.rchit  raytrace.rgen  raytrace.rmiss  vert_shader.vert  wavefront.glsl
